Inventory Layout Fixes - fixed CSS alignment issues with long names breaking flow - gave eggs and potions more wiggle room - centered text beneath newly centered artworks

--- a/styles/app/inventory.styl
+++ b/styles/app/inventory.styl
@@ -60,17 +60,23 @@
 .inventory-list li
     clear:both
 .pets-menu > div
-    float:left
+    display:inline-block
+    vertical-align:top
     padding:.3em
+    width:7em
+    margin-top:1em
     p
       text-align:center
-      width:3em
+      width:6em
 .hatchingPotion-menu > div
-    float:left
+    display:inline-block
+    vertical-align:top
     padding:.3em
+    width:6em
+    margin-top:1em
     p
       text-align:center
-      width:3em
+      width:6em
 
 .pet-button
     border: none
